Fixes channel alignment and rename top content to my edition

--- a/stylesheets/page.scss
+++ b/stylesheets/page.scss
@@ -317,12 +317,15 @@ article.page {
     width: 100%;
     border-top: 90px;
     padding:0 0;
-    
+    left: 20px;
+
     a.follow {
+      position:absolute;
       @include border-radius(80px);
-      margin-left: 50px;
+      left: 50%;
       font-weight: bold;
       line-height: 120px;
+      margin-left: -60px;
       text-align: center;
       width: 120px;
       height: 120px;
